# linux-tv-launcher

./: .gitignore  .releaserc  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: ci.yml
docker/: Dockerfile.aarch64
docs/: color-schema.md  process_monitoring.md
src/: app.rs  assets.rs  auth_dialog.rs  auth_flow.rs  category_list.rs  desktop_apps.rs  focus_manager.rs  game_image_fetcher.rs  game_sources.rs  gamepad.rs  gamepad_battery.rs  gopher64.rs  icons.rs  image_cache.rs  input.rs  launcher.rs  main.rs  messages.rs  model.rs  mupen64plus.rs  osk.rs  searxng.rs  simple64.rs  sleep_inhibit.rs  snes9x.rs  steamgriddb.rs  storage.rs  sudo_askpass.rs  sys_utils.rs  system_battery.rs  system_info.rs  system_update.rs  system_update_state.rs  ui.rs  ui_app_picker.rs  ui_app_update_modal.rs  ui_background.rs  ui_components.rs  ui_main_view.rs  ui_modals.rs  (+7 more)
