[package]
name = "rhinco-tv"
version = "2.0.2"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image", "svg"] }
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "time", "process", "io-util", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
gilrs = "0.11"
rust-embed = "8.9"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.19", features = ["v4", "serde"] }
rayon = "1.11.0"
ureq = { version = "3.1", features = ["json", "rustls"] }
urlencoding = "2.1"
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
procfs = "0.18"
iced_fonts = { version = "0.3", features = ["fontawesome"] }
self_update = { version = "0.42.0", features = ["rustls"], default-features = false }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Profiling profile - optimized with debug symbols (faster build than full release)
[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false
codegen-units = 16
