[package]
name = "rhinco-tv"
version = "2.4.1"
edition = "2021"

[dependencies]
# UI Framework
iced = { version = "0.14", features = ["tokio", "image", "svg", "canvas"] }
iced_fonts = { version = "0.3", features = ["fontawesome"] }
image = { version = "0.25", features = ["png", "jpeg", "webp"] }

# Async Runtime
rayon = "1.11.0"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "time", "process", "io-util", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# System Integration
directories = "6.0"
procfs = "0.18"
zbus = { version = "5.13", features = ["tokio"] }

# Input Handling
gilrs = "0.11"

# Networking
ureq = { version = "3.1", features = ["json", "rustls"] }
urlencoding = "2.1"

# Utilities
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
rust-embed = "8.9"
self_update = { version = "0.42.0", features = ["rustls"], default-features = false }
semver = "1.0.27"
uuid = { version = "1.19", features = ["v4", "serde"] }
zeroize = { version = "1.8", features = ["derive"] }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Profiling profile - optimized with debug symbols (faster build than full release)
[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false
codegen-units = 16
